# tensorRT-mbnet

./: .simulation.sh.swo  .simulation.sh.swp  30confs.csv  CHWKRS.csv  CMakeLists.txt  NvInferRuntime.h  Quickstart_tfKeras_v01.ipynb  README.md  answer  answer.cu  autotesting.sh  autotesting.sh.save  compilation.txt  config.py  conv  conv.cu  converter.sh  create_csv.py  cublas_utils.h  dataset.csv  debug.txt  example  example.cu  get_listst.py  lists.txt  mbnet  mbnet.cu  mbnet.cu.save  mbnet.cu.save.1  mbnet.cu.save.2  mbnet.h  model.py  out.csv  out.txt  parse.py  result.txt  right_ans.tct  sample  sampleMNISTAPI.cpp  sampleOnnxMNIST.cpp  (+12 more)
csv/: cudnn_opt_sum.csv  cudnn_sum.csv  direct_shared_sum.csv  mbnet_method_sum.csv  tensorrt_sum.csv  unroll_cublass_sum.csv
cudnn/: nvprof_comp_1024_13_256.txt  nvprof_comp_1024_13_256_1.csv  nvprof_comp_1024_13_256_1.txt  nvprof_comp_1024_25_512_1.csv  nvprof_comp_1024_25_512_1.txt  nvprof_comp_1024_27_512_1.txt  nvprof_comp_1024_29_255_1.txt  nvprof_comp_1024_40_512_1.csv  nvprof_comp_1024_40_512_1.txt  nvprof_comp_1024_51_512_1.txt  nvprof_comp_1024_56_512_1.txt  nvprof_comp_1024_58_512_1.csv  nvprof_comp_1024_58_512_1.txt  nvprof_comp_128_101_128_1.txt  nvprof_comp_128_101_128_3.csv  nvprof_comp_128_101_128_3.txt  nvprof_comp_128_103_128_1.txt  nvprof_comp_128_103_128_3.txt  nvprof_comp_128_105_128_1.txt  nvprof_comp_128_105_128_3.txt  nvprof_comp_128_107_256_1.csv  nvprof_comp_128_107_256_1.txt  nvprof_comp_128_112_128.txt  nvprof_comp_128_112_128_3.csv  nvprof_comp_128_112_128_3.txt  nvprof_comp_128_14_256.txt  nvprof_comp_128_14_256_1.csv  nvprof_comp_128_14_256_1.txt  nvprof_comp_128_14_256_3.csv  nvprof_comp_128_14_256_3.txt  nvprof_comp_128_14_256_5.csv  nvprof_comp_128_14_256_5.txt  nvprof_comp_128_14_512.txt  nvprof_comp_128_14_512_3.csv  nvprof_comp_128_14_512_3.txt  nvprof_comp_128_157_64_1.txt  nvprof_comp_128_20_256_3.txt  nvprof_comp_128_26_256.txt  nvprof_comp_128_26_256_3.csv  nvprof_comp_128_26_256_3.txt  (+364 more)
cudnn_opt/: nvprof_comp_1024_13_256.txt  nvprof_comp_1024_13_256_1.csv  nvprof_comp_1024_13_256_1.txt  nvprof_comp_1024_25_512_1.csv  nvprof_comp_1024_25_512_1.txt  nvprof_comp_1024_27_512_1.txt  nvprof_comp_1024_29_255_1.txt  nvprof_comp_1024_40_512_1.csv  nvprof_comp_1024_40_512_1.txt  nvprof_comp_1024_51_512_1.txt  nvprof_comp_1024_56_512_1.txt  nvprof_comp_1024_58_512_1.csv  nvprof_comp_1024_58_512_1.txt  nvprof_comp_128_101_128_1.txt  nvprof_comp_128_101_128_3.csv  nvprof_comp_128_101_128_3.txt  nvprof_comp_128_103_128_1.txt  nvprof_comp_128_103_128_3.txt  nvprof_comp_128_105_128_1.txt  nvprof_comp_128_105_128_3.txt  nvprof_comp_128_107_256_1.csv  nvprof_comp_128_107_256_1.txt  nvprof_comp_128_112_128.txt  nvprof_comp_128_112_128_3.csv  nvprof_comp_128_112_128_3.txt  nvprof_comp_128_14_256.txt  nvprof_comp_128_14_256_1.csv  nvprof_comp_128_14_256_1.txt  nvprof_comp_128_14_256_3.csv  nvprof_comp_128_14_256_3.txt  nvprof_comp_128_14_256_5.csv  nvprof_comp_128_14_256_5.txt  nvprof_comp_128_14_512.txt  nvprof_comp_128_14_512_3.csv  nvprof_comp_128_14_512_3.txt  nvprof_comp_128_157_64_1.txt  nvprof_comp_128_20_256_3.txt  nvprof_comp_128_26_256.txt  nvprof_comp_128_26_256_3.csv  nvprof_comp_128_26_256_3.txt  (+368 more)
direct_shared/: nvprof_comp_16_16_32.txt  nvprof_comp_16_16_64.txt  nvprof_comp_16_32_32.txt  nvprof_comp_16_32_64.txt  nvprof_comp_16_8_32.txt  nvprof_comp_16_8_64.txt  nvprof_comp_1_128_6.txt  nvprof_comp_1_256_12.txt  nvprof_comp_1_256_3.txt  nvprof_comp_1_256_6.txt  nvprof_comp_1_256_9.txt  nvprof_comp_1_320_6.txt  nvprof_comp_1_32_6.txt  nvprof_comp_1_400_6.txt  nvprof_comp_1_64_12.txt  nvprof_comp_1_64_9.txt  nvprof_comp_32_32_64.txt  nvprof_comp_32_8_64.txt  nvprof_comp_3_150_16.txt  nvprof_comp_3_32_16.txt  nvprof_comp_3_64_16.txt  nvprof_comp_6_128_16.txt  nvprof_comp_6_150_16.txt  nvprof_comp_6_16_16.txt  nvprof_comp_6_16_32.txt  nvprof_comp_6_32_16.txt  nvprof_comp_6_32_32.txt  nvprof_comp_6_70_16.txt  nvprof_comp_6_8_16.txt  nvprof_comp_6_8_32.txt
mbnet_method/: nvprof_comp_1024_25_512_1.csv  nvprof_comp_1024_25_512_1.txt  nvprof_comp_1024_27_512_1.txt  nvprof_comp_1024_29_255_1.txt  nvprof_comp_1024_40_512_1.csv  nvprof_comp_1024_40_512_1.txt  nvprof_comp_1024_51_512_1.txt  nvprof_comp_1024_56_512_1.txt  nvprof_comp_1024_58_512_1.csv  nvprof_comp_1024_58_512_1.txt  nvprof_comp_128_101_128_1.txt  nvprof_comp_128_101_128_3.csv  nvprof_comp_128_101_128_3.txt  nvprof_comp_128_103_128_1.txt  nvprof_comp_128_103_128_3.txt  nvprof_comp_128_105_128_1.txt  nvprof_comp_128_105_128_3.txt  nvprof_comp_128_107_256_1.csv  nvprof_comp_128_107_256_1.txt  nvprof_comp_128_112_128_3.txt  nvprof_comp_128_14_256_1.csv  nvprof_comp_128_14_256_1.txt  nvprof_comp_128_14_256_3.csv  nvprof_comp_128_14_256_3.txt  nvprof_comp_128_157_64_1.txt  nvprof_comp_128_20_256_3.txt  nvprof_comp_128_27_128_3.txt  nvprof_comp_128_27_256_1.txt  nvprof_comp_128_27_256_3.txt  nvprof_comp_128_28_128_3.csv  nvprof_comp_128_28_128_3.txt  nvprof_comp_128_28_256_3.csv  nvprof_comp_128_28_256_3.txt  nvprof_comp_128_53_64_3.txt  nvprof_comp_128_56_256_3.txt  nvprof_comp_128_65_128_1.txt  nvprof_comp_128_67_128_1.csv  nvprof_comp_128_67_128_1.txt  nvprof_comp_128_69_256_3.txt  nvprof_comp_128_71_256_3.txt  (+169 more)
method/: nvprof_comp_512_224_64.txt
tensorrt/: nvprof_comp_1024_13_256.txt  nvprof_comp_1024_13_256_1.csv  nvprof_comp_1024_13_256_1.txt  nvprof_comp_1024_25_512_1.csv  nvprof_comp_1024_25_512_1.txt  nvprof_comp_1024_27_512_1.txt  nvprof_comp_1024_29_255_1.txt  nvprof_comp_1024_40_512_1.csv  nvprof_comp_1024_40_512_1.txt  nvprof_comp_1024_51_512_1.txt  nvprof_comp_1024_56_512_1.txt  nvprof_comp_1024_58_512_1.csv  nvprof_comp_1024_58_512_1.txt  nvprof_comp_128_101_128_1.txt  nvprof_comp_128_101_128_3.csv  nvprof_comp_128_101_128_3.txt  nvprof_comp_128_103_128_1.txt  nvprof_comp_128_103_128_3.txt  nvprof_comp_128_105_128_1.txt  nvprof_comp_128_105_128_3.txt  nvprof_comp_128_107_256_1.csv  nvprof_comp_128_107_256_1.txt  nvprof_comp_128_112_128.txt  nvprof_comp_128_112_128_3.csv  nvprof_comp_128_112_128_3.txt  nvprof_comp_128_14_256.txt  (+383 more)
(+1432 files in other folders)
